--- a/lib/gits_web/controllers/page_html/home.html.heex
+++ b/lib/gits_web/controllers/page_html/home.html.heex
@@ -15,7 +15,7 @@
     </div>
   </div>
   <h1 class="text-5xl font-semibold text-zinc-950 md:text-6xl dark:text-zinc-300">
-    Unlock <span class="text-brand-basex text-zinc-500">Unforgettable</span> Experiences
+    Unlock <span class="text-brand-base">Unforgettable</span> Experiences
   </h1>
   <p class="max-w-lg text-lg text-zinc-500 dark:text-zinc-300">
     Start planning and hosting your events today.
