--- a/lib/gits_web/live/host_live/view_event.html.heex
+++ b/lib/gits_web/live/host_live/view_event.html.heex
@@ -176,7 +176,7 @@
             {label, unit} <- [
               {"Unique views", @event.unique_views},
               {"Total orders", @event.total_orders},
-              {"Admissions", "0"}
+              {"Admissions", @event.admissions}
             ]
           }
           class="grid pl-2 first:pl-0"
