feat: implement order cancellation feature
- remove `eventcompleted` notifier as it's no longer needed
- add `cancelled_at` attribute to `order` for tracking cancellations
- introduce `ordercancelled` notifier to handle cancellation notifications
- update state machine to include cancellation transitions
- modify order handling in `adminlive.index` for job cancellation
- enhance ui to display cancellation messages in `event_order.html.heex`

--- a/lib/gits_web/live/admin_live/index.html.heex
+++ b/lib/gits_web/live/admin_live/index.html.heex
@@ -1,6 +1,14 @@
-<nav class="flex px-4 pt-4 justify-between max-w-screen-sm">
+<nav class="flex px-4 pt-4 justify-between lg:gap-4 lg:justify-normal max-w-screen-sm">
   <.link
-    :for={{action} <- [{:dashboard}, {:jobs}, {:hosts}, {:users}, {:support}]}
+    :for={
+      {action} <- [
+        {:dashboard},
+        {:jobs}
+        # {:hosts},
+        # {:users},
+        # {:support}
+      ]
+    }
     class="text-sm"
     patch={Routes.admin_index_path(@socket, action)}
   >
@@ -34,6 +42,17 @@
           size={:sm}
         >
           <span>Retry</span>
+        </.button>
+
+        <.button
+          disabled={job.state != :retryable}
+          phx-click="cancel-job"
+          phx-value-name={job.worker}
+          phx-value-id={job.id}
+          variant={:outline}
+          size={:sm}
+        >
+          <span>Cancel</span>
         </.button>
       </:action>
     </.table>
