feat: remove support link and enhance event listing
- removed the support link from `host.html.heex` to streamline
  navigation.
- added `live_render` for `gitsweb.demopricingcalculator` in
  `host.html.heex` for better pricing visibility.
- improved layout and styling in `event_listing.html.heex` for
  better readability and user experience.
- updated icon names to use `i-lucide` for consistency across
  components.

--- a/lib/gits_web/live/storefront_live/event_listing.html.heex
+++ b/lib/gits_web/live/storefront_live/event_listing.html.heex
@@ -5,18 +5,9 @@
     </div>
   </div>
 
-  <div class="space-y-2 px-2">
-    <div :if={false} class="flex items-center gap-4">
-      <div class="flex items-center gap-2">
-        <.icon name="hero-calendar-days" class="size-5" />
-        <span class="text-sm">
-          {Calendar.strftime(@event.starts_at, "%A %d %B %Y")}
-        </span>
-      </div>
-    </div>
-
-    <h1 class="text-2xl font-semibold">{@event.name}</h1>
-    <div class="flex flex-wrap gap-4">
+  <div class="space-y-6 px-2">
+    <h1 class="lg:text-3xl text-2xl font-bold">{@event.name}</h1>
+    <div class="flex flex-wrap gap-2">
       <span
         :if={@event.state == :draft}
         class="inline-flex items-center gap-x-1.5 rounded-md px-2 py-1 text-xs font-medium text-yellow-800 bg-yellow-50 ring-1 ring-inset ring-yellow-600/20"
@@ -40,60 +31,49 @@
       </span>
     </div>
 
-    <div class="grid gap-4">
+    <div class="grid lg:gap-8 gap-4">
       <div class="flex items-start gap-2">
-        <.icon name="hero-clock" class="size-5" />
-        <div class="grid text-zinc-700">
-          <span class="text-sm">
-            Starts {Calendar.strftime(@event.starts_at, "%I:%M %p, %d %B %Y")}
+        <.icon name="i-lucide-calendar-days" class="size-5 text-sm text-zinc-500" />
+        <div class="grid text-zinc-700 font-medium">
+          <span class="">
+            Starts {Calendar.strftime(@event.starts_at, " %H:%M, %A %d %b %Y")}
           </span>
-          <span class="text-sm">
-            Ends {Calendar.strftime(
-              @event.ends_at,
-              if(
-                NaiveDateTime.diff(
-                  NaiveDateTime.end_of_day(@event.ends_at),
-                  NaiveDateTime.end_of_day(@event.starts_at),
-                  :day
-                ) == 0,
-                do: "%I:%M %p",
-                else: "%I:%M %p, %d %B %Y"
-              )
-            )}
+          <span class="">
+            Ends {Calendar.strftime(@event.ends_at, "%H:%M, %d %b %Y")}
           </span>
         </div>
       </div>
 
       <div class="flex items-start gap-2">
-        <.icon name="hero-map-pin" class="size-5" />
+        <.icon name="i-lucide-map-pin" class="size-5 text-zinc-500" />
         <div class="grid">
           <%= if @event.location_is_private or is_nil(@event.venue) do %>
-            <span class="text-sm font-medium">Private Location</span>
-            <span class="text-sm text-zinc-500">
+            <span class="font-medium">Private Location</span>
+            <span class="text-zinc-600">
               Details will be shared with ticket holders
             </span>
           <% else %>
-            <span class="text-sm font-medium">{@event.venue.name}</span>
-            <span class="text-sm text-zinc-500">{@event.venue.address}</span>
+            <span class="font-medium">{@event.venue.name}</span>
+            <span class="text-zinc-600">{@event.venue.address}</span>
           <% end %>
         </div>
       </div>
 
       <div class="flex items-start gap-2">
-        <.icon name="hero-megaphone" class="size-5" />
+        <.icon name="i-lucide-megaphone" class="size-5 text-zinc-500" />
         <div class="flex gap-1.5">
-          <span class="text-sm text-zinc-500">hosted by</span>
-          <span class="text-sm font-medium">{@event.host.name}</span>
+          <span class="text-zinc-600">hosted by</span>
+          <span class="font-medium">{@event.host.name}</span>
         </div>
       </div>
 
       <div class="flex items-start gap-2">
-        <.icon name="hero-banknotes" class="size-5" />
+        <.icon name="i-lucide-hand-coins" class="size-5 text-zinc-500" />
         <div class="">
-          <span class="text-sm text-zinc-500">
+          <span class="text-zinc-500">
             You can <span class="font-medium text-zinc-800">get a refund</span> if:
           </span>
-          <ul class="list-disc text-sm text-zinc-500">
+          <ul class="list-disctext-zinc-500">
             <li class="ml-6">it's within 24 hours of buying tickets</li>
             <li class="ml-6">this event is rescheduled or cancelled</li>
           </ul>
