feat: add price validation and improve ticket edit form
- remove debug statements from `gits.googleplaces` and `gits.paystackapi`
- update `percentage_charge` in `gits.paystackapi` to 5
- introduce `pricevalid` validation in `gits.storefront.tickettype`
- enhance ticket edit form with price validation hint in ui
- handle error cases in ticket editing flow in `gitsweb.hostlive.editticket`

--- a/lib/gits_web/live/host_live/edit_ticket.html.heex
+++ b/lib/gits_web/live/host_live/edit_ticket.html.heex
@@ -26,7 +26,7 @@
 
       <.input type="text" field={tf[:name]} label="Name" />
 
-      <.input type="number" field={tf[:price]} label="Price" />
+      <.input type="number" field={tf[:price]} label="Price" hint="0 or from 50 and above" />
       <.input type="number" field={tf[:quantity]} label="Quantity" />
       <.input type="number" field={tf[:limit_per_user]} label="Limit per user" />
 
