feat: enhance order notifications and user limit checks
- add `match?` function to handle cases with `nil` email
- update `match?` to ensure email is not `nil` in query
- modify `notify` function in `ordercompleted` to check order state
- remove unused `oban.worker` line in `orderconfirmed`
- add handling for `:anonymous` state in `ordercreated`
- change template syntax in `event_address_live.html.heex` for clarity

--- a/lib/gits_web/live/event_address_live.html.heex
+++ b/lib/gits_web/live/event_address_live.html.heex
@@ -17,10 +17,10 @@
         phx-value-id={item.id}
       >
         <span>
-          <%= item.main_text %>
+          {item.main_text}
         </span>
         <span>
-          <%= item.secondary_text %>
+          {item.secondary_text}
         </span>
       </button>
     </div>
@@ -32,10 +32,10 @@
   <div class="px-4">
     <div class="grid">
       <span>
-        <%= @address.name %>
+        {@address.name}
       </span>
       <span>
-        <%= @address.formatted_address %>
+        {@address.formatted_address}
       </span>
     </div>
 
